--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
   <body>
     <img src = "header.jpg" alt = "">
     <img src = "hero.webp" alt="">
+    <img src = "acustica.webp" alt="">
+    <img src = "clasica.webp" alt =""> 
   </body>
 </html>
