--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style media = "screen">
       body {
         margin: 0;
+        border: 10px solid #192b36;
       }
       img {
         max -width: 100%;
@@ -17,6 +18,6 @@
     <img src = "header.jpg" alt = "">
     <img src = "hero.webp" alt="">
     <img src = "acustica.webp" alt="">
-    <img src = "clasica.webp" alt =""> 
+    <img src = "clasica.webp" alt ="">
   </body>
 </html>
