--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
         max -width: 100%;
         vertical-align: top;
       }
+        /*img#responsive{
+          display: none;
+        }*/
+        @media screen and (max-width: 768px) {
+          img#responsive {
+            display: block;
+          }
+        }
+
+      }
       </style>
   </head>
   <body>
-    <img src = "header.jpg" alt = "">
+    <img src = "invie-responsive.webp" alt = "">
     <img src = "hero.webp" alt="">
     <img src = "acustica.webp" alt="">
-    <img src = "clasica.webp" alt =""> 
+    <img src = "clasica.webp" alt ="">
   </body>
 </html>
